<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/TopFrame"
        android:padding="4dp">

        <Button
            android:id="@+id/button_back"
            style="@style/ButtonTop.Back"
            android:visibility="invisible" />

        <TextView
            style="@style/TopFrame.TextVeiw"
            android:text="@string/app_name" />

        <Button
            style="@style/ButtonTop"
            app:icon="@drawable/vector_filterlist"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        style="@style/BottomFrame"

        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            style="@style/ButtonGreat"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/button_search"
            app:icon="@drawable/vector_search" />

        <Button
            android:id="@+id/library_button"
            style="@style/ButtonGreat"
            android:text="@string/button_library"

            app:icon="@drawable/vector_library" />

        <Button
            android:id="@+id/setting_button"
            style="@style/ButtonGreat"
            android:layout_marginBottom="18dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/button_setting"
            app:icon="@drawable/vector_setting" />
    </LinearLayout>

</LinearLayout>
